# nutritionist-menu-planner

./: .gitignore  PR_DESCRIPTION.md  PR_DESCRIPTION_KR.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260107_initial_schema.py  20260107_seed_allergens.py
backend/app/: __init__.py  database.py  main.py
docs/: CODE_CONVENTIONS.md  DATABASE_SCHEMA.md  DOMAIN_MODEL.md  ERD.md  GIT_WORKFLOW.md  KPI_MEASUREMENT.md  MVP_SCOPE.md  PRD.md  PRD_CHANGELOG.md  Technical Stack.md  task.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
